--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light navbar-light"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e2/University_of_Notre_Dame_seal_%282%29.svg/180px-University_of_Notre_Dame_seal_%282%29.svg.png" class="mr-2"><a class="navbar-brand" href="#">Inequality in the World</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-body" aria-controls="navbar-body" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-expand-lg bg-light navbar-light"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e2/University_of_Notre_Dame_seal_%282%29.svg/180px-University_of_Notre_Dame_seal_%282%29.svg.png" class="mr-2"><a class="navbar-brand" href="https://adowney5.github.io/inequality/">Inequality in the World</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-body" aria-controls="navbar-body" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbar-body">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" href="https://adowney5.github.io/inequality/" role="button" aria-haspopup="true" aria-expanded="false">Project Links</a>
@@ -87,19 +87,10 @@
     <script src="js/main.js"></script>
   </body>
     <div class="container" id="bsr-wrapper">
-      <h2>Simple Project Run Through</h2>
-      <div class="row">
-        <div class="col-md-6">
-          <p>This is a video explaining our project for someone who is not familiar with computer science, python and/or data visualization.</p>
-        </div>
-        <div class="col">
-          <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe></div>
-        </div>
-      </div>
       <h2>Complex Project Run Through</h2>
       <div class="row">
         <div class="col">
-          <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe></div>
+          <div class="embed-responsive embed-responsive-16by9"><iframe width="560" height="315" src="https://www.youtube.com/embed/ezIQeApAH_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </div>
         <div class="col-md-6">
           <p> This is a video explaining our project for someone who is very familar with computer science, python and/or data visualization. </p>
