--- a/index.html
+++ b/index.html
@@ -91,21 +91,13 @@
       <div class="row">
         <div class="col">
           <div class="embed-responsive embed-responsive-16by9"><iframe width="560" height="315" src="https://www.youtube.com/embed/ezIQeApAH_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-            <div class="embed-responsive embed-responsive-16by9"><!-- The script tag should live in the head of your page if at all possible -->
-<script type="text/javascript" async src="https://play.vidyard.com/embed/v4.js"></script>
-
-<!-- Put this wherever you would like your player to appear -->
-<img
-  style="width: 100%; margin: auto; display: block;"
-  class="vidyard-player-embed"
-  src="https://play.vidyard.com/ZUms4mYhBW6XezjBeWHfBB.jpg"
-  data-uuid="ZUms4mYhBW6XezjBeWHfBB"
-  data-v="4"
-  data-type="inline"
-/></div>
+          <div class="col-md-6">
+            <p> This is a video explaining our project for someone who is very familar with computer science, python and/or data visualization. </p>
+        </div>
+<script type="text/javascript" async src="https://play.vidyard.com/embed/v4.js"></script><img style="width: 100%; margin: auto; display: block;" class="vidyard-player-embed" src="https://play.vidyard.com/ZUms4mYhBW6XezjBeWHfBB.jpg" data-uuid="ZUms4mYhBW6XezjBeWHfBB"  data-v="4"  data-type="inline"/></div>
         </div>
         <div class="col-md-6">
-          <p> This is a video explaining our project for someone who is very familar with computer science, python and/or data visualization. </p>
+          <p> This is a project page demo. </p>
       </div>
     </div>
     <div class="container" id="bsr-wrapper">
