--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           <div class="col-md-6">
             <p> This is a video explaining our project for someone who is very familar with computer science, python and/or data visualization. </p>
         </div>
+        <h2>Project Demo Video</h2>
 <script type="text/javascript" async src="https://play.vidyard.com/embed/v4.js"></script><img style="width: 100%; margin: auto; display: block;" class="vidyard-player-embed" src="https://play.vidyard.com/ZUms4mYhBW6XezjBeWHfBB.jpg" data-uuid="ZUms4mYhBW6XezjBeWHfBB"  data-v="4"  data-type="inline"/></div>
         </div>
         <div class="col-md-6">
